Issue #3382843 by shweta__sharma, Gauravvvv, smustgrave: Olivero: RSS feed block is not placed as per design on smaller screen

--- a/core/themes/olivero/css/components/feed.css
+++ b/core/themes/olivero/css/components/feed.css
@@ -22,6 +22,13 @@
   color: var(--color--primary-50);
 }
 
+@media (max-width: 75rem) {
+  .feed-icon {
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+  }
+}
+
 .feed-icon__label {
   flex-shrink: 0;
   letter-spacing: 0.08em;
@@ -38,10 +45,17 @@
   height: var(--sp1-5);
   margin-inline-start: var(--sp0-5);
   color: var(--color--white);
+  border-radius: 2px;
   background-color: var(--color--primary-50);
 }
 
 .feed-icon__icon svg {
   vertical-align: top;
   fill: currentColor;
+}
+
+@media (max-width: 75rem) {
+  .feed-icon__icon {
+    margin-inline: 0 var(--sp0-5);
+  }
 }
